--- a/App/package.json
+++ b/App/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "18.18.2",
+    "npm": "9.8.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
